@@ -741,6 +741,18 @@ condition|(
 name|t
 operator|instanceof
 name|SolrServerException
+operator|&&
+operator|(
+operator|(
+name|SolrServerException
+operator|)
+name|t
+operator|)
+operator|.
+name|getCause
+argument_list|()
+operator|!=
+literal|null
 condition|)
 block|{
 name|t
